Wed Jun 23 05:00:34 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING: Wording tweak.

Wed Jun 23 04:11:30 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Need <cstdio> for sprintf().  Fixes
	  compilation error for some platforms and/or compilers (my guess would
	  be GCC 4.5 - it builds OK with GCC 4.4).  (ticket#489)

Tue Jun 22 14:45:37 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.1.

Mon Jun 21 16:00:22 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Sync with 1.0.21 and update from ChangeLog.

Mon Jun 21 15:15:50 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Unix putenv() requires the buffer passed to
	  remain valid, as it stores it directly in the environment.  It's
	  unclear from MSDN if _putenv() does the same, but _putenv_s() must
	  allocate a copy since it needs to have an '=' in, so use that
	  instead.  It also has an interface much like setenv(), so the code
	  looks more similar.

Mon Jun 21 06:07:42 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.cc: Add missing const.

Mon Jun 21 05:21:32 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.cc: Update to match header ABI fix.

Mon Jun 21 03:52:41 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: QueryParser::add_boolean_prefix() now
	  uses two overloaded forms instead of a default parameter so that we
	  don't break the ABI.

Fri Jun 18 16:56:59 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Add 1.0.21 bug reporters.

Fri Jun 18 05:52:00 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.cc,
	  queryparser/queryparser.lemony,queryparser/queryparser_internal.h:
	  Add new optional parameter to QueryParser::add_boolean_prefix() to
	  allow the user to indicate a prefix isn't "exclusive" and that
	  OP_AND should be used to combine multiple instances.  Fixes