@@ -1,3 +1,8 @@
+Wed Jun 23 06:52:54 GMT 2010  Olly Betts <olly@survex.com>
+
+	* xapian-core.spec.in: Update for 1.2.x - add e2fsprogs-devel to
+	  BuildRequires and add new files.
+
 Wed Jun 23 05:00:34 GMT 2010  Olly Betts <olly@survex.com>
 
 	* HACKING: Wording tweak.
